--- a/forget-password.html
+++ b/forget-password.html
@@ -10,11 +10,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,500;1,300&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/assets/css/air-datepicker.css">
-        <link rel="stylesheet" href="/assets/css/common.css">
-        <link rel="stylesheet" href="/assets/css/style.css">
-        <link rel="stylesheet" href="/assets/css/login.css">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/air-datepicker.css">
+    <link rel="stylesheet" href="/assets/css/common.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/login.css">
 </head>
 
 <body>
@@ -53,35 +53,24 @@
     <section class="form-section login-box">
         <div class="container">
             <div class="card-section login-box">
-                <h2 class="heading-title">Login Form</h2>
+                <h2 class="heading-title">Forget Password</h2>
                 <form>
                     <div class="form-group login-form">
                         <label for="inputEmail">
-                            <span class="input-field_label">Username/Email<span class="input-field_required"
-                                    aria-hidden="true"> *</span></span>
-                            <input id="inputEmail" maxlength="40" type="text" 
-                                name="fullName" aria-label="First Name First name is required."
-                                aria-required="true" value="" placeholder="" class="input-field">
+                            <span class="input-field_label">Email<span class="input-field_required" aria-hidden="true">
+                                    *</span></span>
+                            <input id="inputEmail" maxlength="40" type="text" name="fullName"
+                                aria-label="First Name First name is required." aria-required="true" value=""
+                                placeholder="" class="input-field">
                         </label>
                         <div class="error-msg">
                             <p></p>
                         </div>
                     </div>
-                    <div class="form-group login-form">
-                        <label for="inputEmail" class="email-label">
-                            <span class="input-field_label">Password<span class="input-field_required"
-                                    aria-hidden="true"> *</span></span>
-                            <input id="inputEmail" maxlength="40" type="text" 
-                                name="email" aria-label="First Name First name is required."
-                                aria-required="true" value="" placeholder="" class="input-field">
-                        </label>
-                    </div>
-                    <a href="/forget-password.html" class="forget-password">Forget Password?</a>
                     <div class="d-flex form-flex-wrapper btn-div">
-                        <button type="button" class="btn btn-primary btn-lg btn-color">Login</button>
-                        <button type="button" class="btn btn-secondary btn-lg btn-color">Cancel</button>
+                        <button type="button" class="btn btn-primary btn-lg btn-color sendResetCode">Send Reset Code</button>
+                        <a href="/login.html"><button type="button" class="btn btn-secondary btn-lg btn-color forgetCancel">Cancel</button></a>
                     </div>
-                    <p class="text-center">Don't have an account? <a href="/signup.html" class="forget-password">Sign Up</a></p>
                 </form>
             </div>
         </div>
