--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
     <!-- Header Section end here -->
     <!-- Form Section start here -->
     <section class="form-section">
+        <div class="add-btn-div">
+            <img src="/assets/image/add-btn.png" alt="Add Button" class="add-btn">
+        </div>
         <div class="container">
             <div class="card-section">
                 <h2 class="heading-title">Doctors Details Form</h2>
@@ -65,29 +68,38 @@
                                     <label for="inputDoctorName">
                                         <span class="input-field_label">Doctor Name<span class="input-field_required"
                                                 aria-hidden="true"> *</span></span>
-                                        <input id="inputDoctorName" maxlength="40" type="text" autocomplete="given-name"
+                                        <input id="inputDoctorName" maxlength="40" type="text" 
                                             name="fullName" aria-label="First Name First name is required."
                                             aria-required="true" value="" placeholder="" class="input-field">
                                     </label>
+                                    <div class="error-msg">
+                                        <p></p>
+                                    </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="inputEmail" class="email-label">
                                         <span class="input-field_label">Email<span class="input-field_required"
                                                 aria-hidden="true"> *</span></span>
-                                        <input id="inputEmail" maxlength="40" type="text" autocomplete="given-name"
+                                        <input id="inputEmail" maxlength="40" type="text" 
                                             name="email" aria-label="First Name First name is required."
                                             aria-required="true" value="" placeholder="" class="input-field">
                                     </label>
+                                    <div class="error-msg">
+                                        <p></p>
+                                    </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="inputDob" class="dob-label">
                                         <span class="input-field_label">DOB<span class="input-field_required"
                                                 aria-hidden="true"> *</span></span>
-                                        <input id="inputDob" type="text" autocomplete="given-name" name="dob"
+                                        <input id="inputDob" type="text"  name="dob"
                                             aria-label="First Name First name is required." aria-required="true"
                                             value="" placeholder="" class="datepicker-here input-field"
                                             data-language='en' onkeydown="return false;">
                                     </label>
+                                    <div class="error-msg">
+                                        <p></p>
+                                    </div>
                                 </div>
                             </div>
                             <div class="d-flex form-flex-wrapper">
@@ -95,19 +107,25 @@
                                     <label for="inputRegion">
                                         <span class="input-field_label">Region<span class="input-field_required"
                                                 aria-hidden="true"> *</span></span>
-                                        <input id="inputRegion" maxlength="40" type="text" autocomplete="given-name"
+                                        <input id="inputRegion" maxlength="40" type="text" 
                                             name="fullName" aria-label="First Name First name is required."
                                             aria-required="true" value="" placeholder="" class="input-field">
                                     </label>
+                                    <div class="error-msg">
+                                        <p></p>
+                                    </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="inputHQ" class="email-label">
                                         <span class="input-field_label">HQ<span class="input-field_required"
                                                 aria-hidden="true"> *</span></span>
-                                        <input id="inputHQ" maxlength="40" type="text" autocomplete="given-name"
+                                        <input id="inputHQ" maxlength="40" type="text" 
                                             name="email" aria-label="First Name First name is required."
                                             aria-required="true" value="" placeholder="" class="input-field">
                                     </label>
+                                    <div class="error-msg">
+                                        <p></p>
+                                    </div>
                                 </div>
                             </div>
                             <div class="d-flex form-flex-wrapper">
@@ -115,37 +133,47 @@
                                     <label for="inputFSOName">
                                         <span class="input-field_label">FSO Name<span class="input-field_required"
                                                 aria-hidden="true"> *</span></span>
-                                        <input id="inputFSOName" maxlength="40" type="text" autocomplete="given-name"
+                                        <input id="inputFSOName" maxlength="40" type="text" 
                                             name="fullName" aria-label="First Name First name is required."
                                             aria-required="true" value="" placeholder="" class="input-field">
                                     </label>
+                                    <div class="error-msg">
+                                        <p></p>
+                                    </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="inputDoctorNumber" class="email-label">
                                         <span class="input-field_label">Doctor Mobile<span class="input-field_required"
                                                 aria-hidden="true"> *</span></span>
-                                        <input id="inputDoctorNumber" maxlength="40" type="text"
-                                            autocomplete="given-name" name="email"
+                                        <input id="inputDoctorNumber" maxlength="10" type="text"
+                                             name="email"
                                             aria-label="First Name First name is required." aria-required="true"
                                             value="" placeholder="" class="input-field">
                                     </label>
+                                    <div class="error-msg">
+                                        <p></p>
+                                    </div>
                                 </div>
                             </div>
                             <div class="d-flex form-flex-wrapper btn-div">
-                                <button type="button" class="btn btn-primary btn-lg btn-color">Submit</button>
-                                <button type="button" class="btn btn-secondary btn-lg btn-color">Cancel</button>
+                                <button type="button" class="btn btn-primary btn-lg btn-color submit-btn" disabled>Submit</button>
+                                <button type="button" class="btn btn-secondary btn-lg btn-color cancel-btn">Cancel</button>
                             </div>
                         </div>
                         <div class="right-side-wrapper">
                             <div class="card-section-img">
-                                <div class="form-group">
+                                <div class="form-group d-flex">
                                     <label for="inputFile" class="file-label">
                                         <span class="input-field_label-file">Upload Doctor Photo<span
                                                 class="input-field_required" aria-hidden="true"> *</span></span>
                                         <input type="file" id="inputFile" class="input-file-type input-field"
                                             accept="image/png, image/jpg, image/jpeg" hidden>
                                     </label>
+                                    <div class="error-msg">
+                                        <p></p>
+                                    </div>
                                 </div>
+                                <img src="" alt="doctors photos upload" class="photo-upload-img dsp-none">
                             </div>
                         </div>
                     </div>
@@ -168,11 +196,12 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <img src="" alt="doctors photos upload" class="photo-upload-img dsp-none">
+                    <img src="" alt="doctors photos upload" class="photo-upload-img dsp-none" id="cropperjs">
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary btn-color close-btn" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary btn-color">Save</button>
+                    <button type="button" class="btn btn-secondary btn-color close-btn"
+                        data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary btn-color save-btn">Save</button>
                 </div>
             </div>
         </div>
@@ -188,5 +217,6 @@
 <script src="/assets/js/base64.js"></script>
 <script src="/assets/js/setImage.js"></script>
 <script src="/assets/js/main.js"></script>
+<script src="/assets/js/validation.js"></script>
 
 </html>
