--- a/signup.html
+++ b/signup.html
@@ -48,25 +48,31 @@
                         <label for="inputDoctorName">
                             <span class="input-field_label">Username<span class="input-field_required"
                                     aria-hidden="true"> *</span></span>
-                            <input id="inputDoctorName" maxlength="40" type="text" autocomplete="given-name"
+                            <input id="inputDoctorName" maxlength="40" type="text" 
                                 name="fullName" aria-label="First Name First name is required."
                                 aria-required="true" value="" placeholder="" class="input-field">
                         </label>
+                        <div class="error-msg">
+                            <p></p>
+                        </div>
                     </div>
                     <div class="form-group login-form">
                         <label for="inputEmail">
                             <span class="input-field_label">Email<span class="input-field_required"
                                     aria-hidden="true"> *</span></span>
-                            <input id="inputEmail" maxlength="40" type="text" autocomplete="given-name"
+                            <input id="inputEmail" maxlength="40" type="text" 
                                 name="fullName" aria-label="First Name First name is required."
                                 aria-required="true" value="" placeholder="" class="input-field">
                         </label>
+                        <div class="error-msg">
+                            <p></p>
+                        </div>
                     </div>
                     <div class="form-group login-form">
                         <label for="inputPassword" class="email-label">
                             <span class="input-field_label">Password<span class="input-field_required"
                                     aria-hidden="true"> *</span></span>
-                            <input id="inputPassword" maxlength="40" type="text" autocomplete="given-name"
+                            <input id="inputPassword" maxlength="40" type="text" 
                                 name="email" aria-label="First Name First name is required."
                                 aria-required="true" value="" placeholder="" class="input-field">
                         </label>
@@ -75,7 +81,7 @@
                         <label for="inputConfirmPassword" class="email-label">
                             <span class="input-field_label">Confirm Password<span class="input-field_required"
                                     aria-hidden="true"> *</span></span>
-                            <input id="inputConfirmPassword" maxlength="40" type="text" autocomplete="given-name"
+                            <input id="inputConfirmPassword" maxlength="40" type="text" 
                                 name="email" aria-label="First Name First name is required."
                                 aria-required="true" value="" placeholder="" class="input-field">
                         </label>
@@ -99,5 +105,6 @@
 <script src="/assets/js/setImage.js"></script>
 <script src="/assets/js/main.js"></script>
 <script src="/assets/js/login.js"></script>
+<script src="/assets/js/validation.js"></script>
 
 </html>
