some changes done

--- a/signup.html
+++ b/signup.html
@@ -45,10 +45,10 @@
                 <h2 class="heading-title">Sign Up Form</h2>
                 <form>
                     <div class="form-group login-form">
-                        <label for="inputDoctorName">
+                        <label for="inputUserName">
                             <span class="input-field_label">Username<span class="input-field_required"
                                     aria-hidden="true"> *</span></span>
-                            <input id="inputDoctorName" maxlength="40" type="text" 
+                            <input id="inputUserName" maxlength="40" type="text" 
                                 name="fullName" aria-label="First Name First name is required."
                                 aria-required="true" value="" placeholder="" class="input-field">
                         </label>
@@ -87,7 +87,7 @@
                         </label>
                     </div>
                     <div class="d-flex form-flex-wrapper btn-div">
-                        <button type="button" class="btn btn-primary btn-lg btn-color">Sign Up</button>
+                        <button type="button" class="btn btn-primary btn-lg btn-color signUp-btn">Sign Up</button>
                         <button type="button" class="btn btn-secondary btn-lg btn-color">Cancel</button>
                     </div>
                 </form>
