--- a/index.html
+++ b/index.html
@@ -26,16 +26,32 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <ul class="navbar-nav mr-auto">
-                    <a class="navbar-brand" href="#">Doctor/Name</a>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link dsp-none" href="#">Admin</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/login.html">Login</a>
-                    </li>
+                    <div class="mobile-wrapper-nav-icon">
+                        <a class="navbar-brand" href="#">Doctor/Name</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                            data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                    </div>
+                    <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                        aria-labelledby="offcanvasDarkNavbarLabel">
+                        <div class="d-flex nav-mobile">
+                            <h5 class="offcanvas-title desktop-dsp-none" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
+                            <button type="button" class="btn-close btn-close-white desktop-dsp-none"
+                                data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        </div>
+                        <div class="d-flex mobile-d-flex">
+                            <li class="nav-item">
+                                <a class="nav-link" href="/index.html">Home</a>
+                            </li>
+                            <li class="nav-item dsp-none">
+                                <a class="nav-link" href="#">Admin</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/login.html">Login</a>
+                            </li>
+                        </div>
+                    </div>
                 </ul>
                 <div class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
@@ -53,7 +69,7 @@
     </section>
     <!-- Header Section end here -->
     <!-- Form Section start here -->
-    <section class="form-section">
+    <section class="form-section dsp-none">
         <div class="add-btn-div">
             <img src="/assets/image/add-btn.png" alt="Add Button" class="add-btn">
         </div>
@@ -68,9 +84,9 @@
                                     <label for="inputDoctorName">
                                         <span class="input-field_label">Doctor Name<span class="input-field_required"
                                                 aria-hidden="true"> *</span></span>
-                                        <input id="inputDoctorName" maxlength="40" type="text" 
-                                            name="fullName" aria-label="First Name First name is required."
-                                            aria-required="true" value="" placeholder="" class="input-field">
+                                        <input id="inputDoctorName" maxlength="40" type="text" name="fullName"
+                                            aria-label="First Name First name is required." aria-required="true"
+                                            value="" placeholder="" class="input-field">
                                     </label>
                                     <div class="error-msg">
                                         <p></p>
@@ -80,9 +96,9 @@
                                     <label for="inputEmail" class="email-label">
                                         <span class="input-field_label">Email<span class="input-field_required"
                                                 aria-hidden="true"> *</span></span>
-                                        <input id="inputEmail" maxlength="40" type="text" 
-                                            name="email" aria-label="First Name First name is required."
-                                            aria-required="true" value="" placeholder="" class="input-field">
+                                        <input id="inputEmail" maxlength="40" type="text" name="email"
+                                            aria-label="First Name First name is required." aria-required="true"
+                                            value="" placeholder="" class="input-field">
                                     </label>
                                     <div class="error-msg">
                                         <p></p>
@@ -92,7 +108,7 @@
                                     <label for="inputDob" class="dob-label">
                                         <span class="input-field_label">DOB<span class="input-field_required"
                                                 aria-hidden="true"> *</span></span>
-                                        <input id="inputDob" type="text"  name="dob"
+                                        <input id="inputDob" type="text" name="dob"
                                             aria-label="First Name First name is required." aria-required="true"
                                             value="" placeholder="" class="datepicker-here input-field"
                                             data-language='en' onkeydown="return false;">
@@ -107,9 +123,9 @@
                                     <label for="inputRegion">
                                         <span class="input-field_label">Region<span class="input-field_required"
                                                 aria-hidden="true"> *</span></span>
-                                        <input id="inputRegion" maxlength="40" type="text" 
-                                            name="fullName" aria-label="First Name First name is required."
-                                            aria-required="true" value="" placeholder="" class="input-field">
+                                        <input id="inputRegion" maxlength="40" type="text" name="fullName"
+                                            aria-label="First Name First name is required." aria-required="true"
+                                            value="" placeholder="" class="input-field">
                                     </label>
                                     <div class="error-msg">
                                         <p></p>
@@ -119,9 +135,9 @@
                                     <label for="inputHQ" class="email-label">
                                         <span class="input-field_label">HQ<span class="input-field_required"
                                                 aria-hidden="true"> *</span></span>
-                                        <input id="inputHQ" maxlength="40" type="text" 
-                                            name="email" aria-label="First Name First name is required."
-                                            aria-required="true" value="" placeholder="" class="input-field">
+                                        <input id="inputHQ" maxlength="40" type="text" name="email"
+                                            aria-label="First Name First name is required." aria-required="true"
+                                            value="" placeholder="" class="input-field">
                                     </label>
                                     <div class="error-msg">
                                         <p></p>
@@ -133,9 +149,9 @@
                                     <label for="inputFSOName">
                                         <span class="input-field_label">FSO Name<span class="input-field_required"
                                                 aria-hidden="true"> *</span></span>
-                                        <input id="inputFSOName" maxlength="40" type="text" 
-                                            name="fullName" aria-label="First Name First name is required."
-                                            aria-required="true" value="" placeholder="" class="input-field">
+                                        <input id="inputFSOName" maxlength="40" type="text" name="fullName"
+                                            aria-label="First Name First name is required." aria-required="true"
+                                            value="" placeholder="" class="input-field">
                                     </label>
                                     <div class="error-msg">
                                         <p></p>
@@ -145,8 +161,7 @@
                                     <label for="inputDoctorNumber" class="email-label">
                                         <span class="input-field_label">Doctor Mobile<span class="input-field_required"
                                                 aria-hidden="true"> *</span></span>
-                                        <input id="inputDoctorNumber" maxlength="10" type="text"
-                                             name="email"
+                                        <input id="inputDoctorNumber" maxlength="10" type="text" name="email"
                                             aria-label="First Name First name is required." aria-required="true"
                                             value="" placeholder="" class="input-field">
                                     </label>
@@ -156,8 +171,10 @@
                                 </div>
                             </div>
                             <div class="d-flex form-flex-wrapper btn-div">
-                                <button type="button" class="btn btn-primary btn-lg btn-color submit-btn" disabled>Submit</button>
-                                <button type="button" class="btn btn-secondary btn-lg btn-color cancel-btn">Cancel</button>
+                                <button type="submit" class="btn btn-primary btn-lg btn-color submit-btn"
+                                    disabled>Submit</button>
+                                <button type="button"
+                                    class="btn btn-secondary btn-lg btn-color cancel-btn">Cancel</button>
                             </div>
                         </div>
                         <div class="right-side-wrapper">
@@ -166,14 +183,15 @@
                                     <label for="inputFile" class="file-label">
                                         <span class="input-field_label-file">Upload Doctor Photo<span
                                                 class="input-field_required" aria-hidden="true"> *</span></span>
-                                        <input type="file" id="inputFile" class="input-file-type input-field"
+                                        <input type="file" id="inputFile" class="input-file-type"
                                             accept="image/png, image/jpg, image/jpeg" hidden>
                                     </label>
                                     <div class="error-msg">
                                         <p></p>
                                     </div>
                                 </div>
-                                <img src="" alt="doctors photos upload" class="photo-upload-img dsp-none">
+                                <img src="" alt="doctors photos upload" id="change-img"
+                                    class="photo-upload-img dsp-none">
                             </div>
                         </div>
                     </div>
@@ -193,13 +211,13 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title fs-5" id="staticBackdropLabel">Crop Image</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close modal-close-btn" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <img src="" alt="doctors photos upload" class="photo-upload-img dsp-none" id="cropperjs">
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary btn-color close-btn"
+                    <button type="button" class="btn btn-secondary btn-color modal-close-btn"
                         data-bs-dismiss="modal">Close</button>
                     <button type="button" class="btn btn-primary btn-color save-btn">Save</button>
                 </div>
