--- a/signup.html
+++ b/signup.html
@@ -18,22 +18,52 @@
 </head>
 
 <body>
+    <!-- loader -->
+    <div class="lds-dual-ring"></div>
+    <!-- loader -->
     <!-- Header Section start here -->
     <section>
         <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <ul class="navbar-nav mr-auto">
-                    <a class="navbar-brand" href="#">Doctor/Name</a>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link dsp-none" href="#">Admin</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/login.html">Login</a>
-                    </li>
+                    <div class="mobile-wrapper-nav-icon">
+                        <a class="navbar-brand" href="#">Doctor/Name</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                            data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                    </div>
+                    <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                        aria-labelledby="offcanvasDarkNavbarLabel">
+                        <div class="d-flex nav-mobile">
+                            <h5 class="offcanvas-title desktop-dsp-none" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
+                            <button type="button" class="btn-close btn-close-white desktop-dsp-none"
+                                data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        </div>
+                        <div class="d-flex mobile-d-flex">
+                            <li class="nav-item">
+                                <a class="nav-link" href="/index.html">Home</a>
+                            </li>
+                            <li class="nav-item dsp-none">
+                                <a class="nav-link" href="#">Admin</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/login.html">Login</a>
+                            </li>
+                        </div>
+                    </div>
                 </ul>
+                <div class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false"> <i class="fas fa-user mx-1"></i> Profile
+                    </a>
+                    <!-- Dropdown menu -->
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                        <li>
+                            <a class="dropdown-item" href="#">Log out</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </section>
