--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         </div>
                     </div>
                 </ul>
-                <div class="nav-item dropdown">
+                <div class="nav-item dropdown dsp-none">
                     <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false"> <i class="fas fa-user mx-1"></i> Profile
                     </a>
@@ -69,13 +69,18 @@
     </section>
     <!-- Header Section end here -->
     <!-- Form Section start here -->
-    <section class="form-section dsp-none">
+    <section class="form-section main">
         <div class="add-btn-div">
             <img src="/assets/image/add-btn.png" alt="Add Button" class="add-btn">
         </div>
+        <div class="sideBar-cardClone i-dsp-none">
+            <div class="select-item">
+                <a href="javascript:void(0)">1</a>
+            </div>
+        </div>
         <div class="container">
-            <div class="card-section">
-                <h2 class="heading-title">Doctors Details Form</h2>
+            <div class="card-section" data-id="card-0">
+                <h2 class="heading-title">Doctors Details Form <span class="form-number"></span></h2>
                 <form>
                     <div class="d-flex main-wrapper">
                         <div class="left-side-wrapper">
