--- a/admin.html
+++ b/admin.html
@@ -53,7 +53,7 @@
                         </div>
                     </div>
                 </ul>
-                <div class="nav-item dropdown">
+                <div class="nav-item dropdown dsp-none">
                     <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false"> <i class="fas fa-user mx-1"></i> Profile
                     </a>
@@ -69,7 +69,7 @@
     </section>
     <!-- Header Section end here -->
     <!-- Form Section start here -->
-    <section class="form-section">
+    <section class="form-section dsp-none">
         <div class="container">
             <div class="card-section">
                 <h2 class="heading-title">Admin Panel</h2>
