--- a/forget-password.html
+++ b/forget-password.html
@@ -36,7 +36,8 @@
                     <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
                         aria-labelledby="offcanvasDarkNavbarLabel">
                         <div class="d-flex nav-mobile">
-                            <h5 class="offcanvas-title desktop-dsp-none" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
+                            <h5 class="offcanvas-title desktop-dsp-none" id="offcanvasDarkNavbarLabel">Dark offcanvas
+                            </h5>
                             <button type="button" class="btn-close btn-close-white desktop-dsp-none"
                                 data-bs-dismiss="offcanvas" aria-label="Close"></button>
                         </div>
@@ -53,7 +54,7 @@
                         </div>
                     </div>
                 </ul>
-                <div class="nav-item dropdown">
+                <div class="nav-item dropdown dsp-none">
                     <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false"> <i class="fas fa-user mx-1"></i> Profile
                     </a>
@@ -86,9 +87,11 @@
                             <p></p>
                         </div>
                     </div>
-                    <div class="d-flex form-flex-wrapper btn-div">
-                        <button type="button" class="btn btn-primary btn-lg btn-color sendResetCode">Send Reset Code</button>
-                        <a href="/login.html"><button type="button" class="btn btn-secondary btn-lg btn-color forgetCancel">Cancel</button></a>
+                    <div class="d-flex form-flex-wrapper btn-div forget-btn-div">
+                        <button type="button" class="btn btn-primary btn-lg btn-color sendResetCode forget-btn">Send Reset
+                            Code</button>
+                        <a href="/login.html"><button type="button"
+                                class="btn btn-secondary btn-lg btn-color forgetCancel forget-btn">Cancel</button></a>
                     </div>
                 </form>
             </div>
