--- a/login.html
+++ b/login.html
@@ -10,11 +10,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,500;1,300&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/assets/css/air-datepicker.css">
-        <link rel="stylesheet" href="/assets/css/common.css">
-        <link rel="stylesheet" href="/assets/css/style.css">
-        <link rel="stylesheet" href="/assets/css/login.css">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/air-datepicker.css">
+    <link rel="stylesheet" href="/assets/css/common.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/login.css">
 </head>
 
 <body>
@@ -36,7 +36,8 @@
                     <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
                         aria-labelledby="offcanvasDarkNavbarLabel">
                         <div class="d-flex nav-mobile">
-                            <h5 class="offcanvas-title desktop-dsp-none" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
+                            <h5 class="offcanvas-title desktop-dsp-none" id="offcanvasDarkNavbarLabel">Dark offcanvas
+                            </h5>
                             <button type="button" class="btn-close btn-close-white desktop-dsp-none"
                                 data-bs-dismiss="offcanvas" aria-label="Close"></button>
                         </div>
@@ -53,7 +54,7 @@
                         </div>
                     </div>
                 </ul>
-                <div class="nav-item dropdown">
+                <div class="nav-item dropdown dsp-none">
                     <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false"> <i class="fas fa-user mx-1"></i> Profile
                     </a>
@@ -78,21 +79,19 @@
                         <label for="inputEmail">
                             <span class="input-field_label">Username/Email<span class="input-field_required"
                                     aria-hidden="true"> *</span></span>
-                            <input id="inputEmail" maxlength="40" type="text" 
-                                name="fullName" aria-label="First Name First name is required."
-                                aria-required="true" value="" placeholder="" class="input-field">
+                            <input id="inputEmail" maxlength="40" type="text" name="fullName"
+                                aria-label="First Name First name is required." aria-required="true" value=""
+                                placeholder="" class="input-field">
                         </label>
                         <div class="error-msg">
                             <p></p>
                         </div>
                     </div>
                     <div class="form-group login-form">
-                        <label for="inputEmail" class="email-label">
+                        <label for="inputPassword" class="password-label">
                             <span class="input-field_label">Password<span class="input-field_required"
                                     aria-hidden="true"> *</span></span>
-                            <input id="inputEmail" maxlength="40" type="text" 
-                                name="email" aria-label="First Name First name is required."
-                                aria-required="true" value="" placeholder="" class="input-field">
+                            <input id="inputPassword" type="text" name="password" class="input-field">
                         </label>
                     </div>
                     <a href="/forget-password.html" class="forget-password">Forget Password?</a>
@@ -100,7 +99,8 @@
                         <button type="button" class="btn btn-primary btn-lg btn-color">Login</button>
                         <button type="button" class="btn btn-secondary btn-lg btn-color">Cancel</button>
                     </div>
-                    <p class="text-center">Don't have an account? <a href="/signup.html" class="forget-password">Sign Up</a></p>
+                    <p class="text-center">Don't have an account? <a href="/signup.html" class="forget-password">Sign
+                            Up</a></p>
                 </form>
             </div>
         </div>
