--- a/signup.html
+++ b/signup.html
@@ -10,11 +10,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,500;1,300&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/assets/css/air-datepicker.css">
-        <link rel="stylesheet" href="/assets/css/common.css">
-        <link rel="stylesheet" href="/assets/css/style.css">
-        <link rel="stylesheet" href="/assets/css/login.css">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/air-datepicker.css">
+    <link rel="stylesheet" href="/assets/css/common.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/login.css">
 </head>
 
 <body>
@@ -36,7 +36,8 @@
                     <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
                         aria-labelledby="offcanvasDarkNavbarLabel">
                         <div class="d-flex nav-mobile">
-                            <h5 class="offcanvas-title desktop-dsp-none" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
+                            <h5 class="offcanvas-title desktop-dsp-none" id="offcanvasDarkNavbarLabel">Dark offcanvas
+                            </h5>
                             <button type="button" class="btn-close btn-close-white desktop-dsp-none"
                                 data-bs-dismiss="offcanvas" aria-label="Close"></button>
                         </div>
@@ -53,7 +54,7 @@
                         </div>
                     </div>
                 </ul>
-                <div class="nav-item dropdown">
+                <div class="nav-item dropdown dsp-none">
                     <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false"> <i class="fas fa-user mx-1"></i> Profile
                     </a>
@@ -78,9 +79,9 @@
                         <label for="inputUserName">
                             <span class="input-field_label">Username<span class="input-field_required"
                                     aria-hidden="true"> *</span></span>
-                            <input id="inputUserName" maxlength="40" type="text" 
-                                name="fullName" aria-label="First Name First name is required."
-                                aria-required="true" value="" placeholder="" class="input-field">
+                            <input id="inputUserName" maxlength="40" type="text" name="fullName"
+                                aria-label="First Name First name is required." aria-required="true" value=""
+                                placeholder="" class="input-field">
                         </label>
                         <div class="error-msg">
                             <p></p>
@@ -88,11 +89,11 @@
                     </div>
                     <div class="form-group login-form">
                         <label for="inputEmail">
-                            <span class="input-field_label">Email<span class="input-field_required"
-                                    aria-hidden="true"> *</span></span>
-                            <input id="inputEmail" maxlength="40" type="text" 
-                                name="fullName" aria-label="First Name First name is required."
-                                aria-required="true" value="" placeholder="" class="input-field">
+                            <span class="input-field_label">Email<span class="input-field_required" aria-hidden="true">
+                                    *</span></span>
+                            <input id="inputEmail" maxlength="40" type="text" name="fullName"
+                                aria-label="First Name First name is required." aria-required="true" value=""
+                                placeholder="" class="input-field">
                         </label>
                         <div class="error-msg">
                             <p></p>
@@ -102,23 +103,23 @@
                         <label for="inputPassword" class="email-label">
                             <span class="input-field_label">Password<span class="input-field_required"
                                     aria-hidden="true"> *</span></span>
-                            <input id="inputPassword" maxlength="40" type="text" 
-                                name="email" aria-label="First Name First name is required."
-                                aria-required="true" value="" placeholder="" class="input-field">
+                            <input id="inputPassword" maxlength="40" type="text" name="email"
+                                aria-label="First Name First name is required." aria-required="true" value=""
+                                placeholder="" class="input-field">
                         </label>
                     </div>
                     <div class="form-group login-form">
                         <label for="inputConfirmPassword" class="email-label">
                             <span class="input-field_label">Confirm Password<span class="input-field_required"
                                     aria-hidden="true"> *</span></span>
-                            <input id="inputConfirmPassword" maxlength="40" type="text" 
-                                name="email" aria-label="First Name First name is required."
-                                aria-required="true" value="" placeholder="" class="input-field">
+                            <input id="inputConfirmPassword" maxlength="40" type="text" name="email"
+                                aria-label="First Name First name is required." aria-required="true" value=""
+                                placeholder="" class="input-field">
                         </label>
                     </div>
                     <div class="d-flex form-flex-wrapper btn-div">
                         <button type="button" class="btn btn-primary btn-lg btn-color signUp-btn">Sign Up</button>
-                        <button type="button" class="btn btn-secondary btn-lg btn-color">Cancel</button>
+                        <button type="button" class="btn btn-secondary btn-lg btn-color cancel-btn">Cancel</button>
                     </div>
                 </form>
             </div>
