main branch pull

--- a/login.html
+++ b/login.html
@@ -77,7 +77,7 @@
                 <form>
                     <div class="form-group login-form">
                         <label for="inputEmail">
-                            <span class="input-field_label">Username/Email<span class="input-field_required"
+                            <span class="input-field_label">Email<span class="input-field_required"
                                     aria-hidden="true"> *</span></span>
                             <input id="inputEmail" maxlength="40" type="text" name="fullName"
                                 aria-label="First Name First name is required." aria-required="true" value=""
@@ -96,8 +96,8 @@
                     </div>
                     <a href="/forget-password.html" class="forget-password">Forget Password?</a>
                     <div class="d-flex form-flex-wrapper btn-div">
-                        <button type="button" class="btn btn-primary btn-lg btn-color">Login</button>
-                        <button type="button" class="btn btn-secondary btn-lg btn-color">Cancel</button>
+                        <button type="button" class="btn btn-primary btn-lg btn-color login-btn">Login</button>
+                        <button type="button" class="btn btn-secondary btn-lg btn-color cancel-btn">Cancel</button>
                     </div>
                     <p class="text-center">Don't have an account? <a href="/signup.html" class="forget-password">Sign
                             Up</a></p>
