--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                                 </div>
                             </div>
                             <div class="d-flex form-flex-wrapper btn-div">
-                                <button type="submit" class="btn btn-primary btn-lg btn-color submit-btn"
+                                <button type="button" class="btn btn-primary btn-lg btn-color submit-btn"
                                     disabled>Submit</button>
                                 <button type="button"
                                     class="btn btn-secondary btn-lg btn-color cancel-btn">Cancel</button>
