minus btn addded

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="add-btn-div">
             <img src="/assets/image/add-btn.png" alt="Add Button" class="add-btn">
         </div>
-        <div class="minus-btn-div">
+        <div class="minus-btn-div dsp-none">
             <img src="/assets/image/minus-btn.png" alt="Minus Button" class="minus-btn">
         </div>
         <div class="sideBar-cardClone i-dsp-none">
