backend feature added

--- a/signup.html
+++ b/signup.html
@@ -100,6 +100,42 @@
                         </div>
                     </div>
                     <div class="form-group login-form">
+                        <label for="inputRegion">
+                            <span class="input-field_label">Region<span class="input-field_required"
+                                    aria-hidden="true"> *</span></span>
+                            <input id="inputRegion" maxlength="40" type="text" name="fullName"
+                                aria-label="First Name First name is required." aria-required="true"
+                                value="" placeholder="" class="input-field">
+                        </label>
+                        <div class="error-msg">
+                            <p></p>
+                        </div>
+                    </div>
+                    <div class="form-group login-form">
+                        <label for="inputHQ" class="email-label">
+                            <span class="input-field_label">HQ<span class="input-field_required"
+                                    aria-hidden="true"> *</span></span>
+                            <input id="inputHQ" maxlength="40" type="text" name="email"
+                                aria-label="First Name First name is required." aria-required="true"
+                                value="" placeholder="" class="input-field">
+                        </label>
+                        <div class="error-msg">
+                            <p></p>
+                        </div>
+                    </div>
+                    <div class="form-group login-form">
+                        <label for="inputFSOName">
+                            <span class="input-field_label">FSO Name<span class="input-field_required"
+                                    aria-hidden="true"> *</span></span>
+                            <input id="inputFSOName" maxlength="40" type="text" name="fullName"
+                                aria-label="First Name First name is required." aria-required="true"
+                                value="" placeholder="" class="input-field">
+                        </label>
+                        <div class="error-msg">
+                            <p></p>
+                        </div>
+                    </div>
+                    <div class="form-group login-form">
                         <label for="inputPassword" class="email-label">
                             <span class="input-field_label">Password<span class="input-field_required"
                                     aria-hidden="true"> *</span></span>
