--- a/login.html
+++ b/login.html
@@ -92,13 +92,13 @@
                             <span class="input-field_label">Password<span class="input-field_required"
                                     aria-hidden="true"> *</span></span>
                             <input id="inputPassword" type="password" name="password" class="input-field">
-                            <div class="password-icon-div">
+                            <div class="password-icon-div login">
                                 <img src="/assets/image/password-icon.png" alt="password-eye-icon"
                                     class="password-icon-eye">
                             </div>
                         </label>
                     </div>
-                    <a href="/forget-password.html" class="forget-password">Forget Password?</a>
+                    <a href="/forget-password.html" class="forget-password dsp-none">Forget Password?</a>
                     <div class="d-flex form-flex-wrapper btn-div">
                         <button type="button" class="btn btn-primary btn-lg btn-color login-btn">Login</button>
                         <button type="button" class="btn btn-secondary btn-lg btn-color cancel-btn">Cancel</button>
@@ -118,8 +118,9 @@
 <script src="/assets/js/air-datepicker.js"></script>
 <script src="/assets/js/base64.js"></script>
 <script src="/assets/js/setImage.js"></script>
+<script src="/assets/js/header.js"></script>
 <script src="/assets/js/main.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.4/axios.js"></script>
+<script src="/assets/js/axios.js"></script>
 <script src="/assets/js/login.js"></script>
 <script src="/assets/js/validation.js"></script>
 
