--- a/signup.html
+++ b/signup.html
@@ -151,9 +151,9 @@
                             <input id="inputConfirmPassword" type="password" name="confirmPassword"
                                 aria-label="First Name First name is required." aria-required="true" value=""
                                 placeholder="" class="input-field">
-                            <div class="password-icon-div">
+                            <div class="password-icon-div signup">
                                 <img src="/assets/image/password-icon.png" alt="password-eye-icon"
-                                    class="password-icon-eye">
+                                    class="password-    eye">
                             </div>
                         </label>
                         <div class="error-msg">
@@ -178,8 +178,9 @@
 <script src="/assets/js/air-datepicker.js"></script>
 <script src="/assets/js/base64.js"></script>
 <script src="/assets/js/setImage.js"></script>
+<script src="/assets/js/header.js"></script>
 <script src="/assets/js/main.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.4/axios.js"></script>
+<script src="/assets/js/axios.js"></script>
 <script src="/assets/js/login.js"></script>
 <script src="/assets/js/validation.js"></script>
 
