some thing changes

--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
 <script src="/assets/js/base64.js"></script>
 <script src="/assets/js/setImage.js"></script>
 <script src="/assets/js/axios.js"></script>
+<script src="/assets/js/admin.js"></script>
 <script src="/assets/js/main.js"></script>
 <script src="/assets/js/validation.js"></script>
 
