some change done

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -10,12 +10,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,500;1,300&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/jquery.dataTables.min.css">
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/air-datepicker.css">
-    <link rel="stylesheet" href="/assets/css/datatables.min.css">
-    <link rel="stylesheet" href="/assets/css/common.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/air-datepicker.css">
+    <link rel="stylesheet" href="./assets/css/datatables.min.css">
+    <link rel="stylesheet" href="./assets/css/common.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
@@ -96,17 +96,17 @@
     <!-- Form Section end here -->
 
 </body>
-<script src="/assets/js/jquery.min.js"></script>
-<script src="/assets/js/jquery.dataTables.min.js"></script>
-<script src="/assets/js/popper.min.js"></script>
-<script src="/assets/js/bootstrap.js"></script>
-<script src="/assets/js/air-datepicker.js"></script>
-<script src="/assets/js/datatables.min.js"></script>
-<script src="/assets/js/header.js"></script>
-<script src="/assets/js/base64.js"></script>
-<script src="/assets/js/setImage.js"></script>
-<script src="/assets/js/axios.js"></script>
-<script src="/assets/js/admin.js"></script>
-<script src="/assets/js/main.js"></script>
+<script src="./assets/js/jquery.min.js"></script>
+<script src="./assets/js/jquery.dataTables.min.js"></script>
+<script src="./assets/js/popper.min.js"></script>
+<script src="./assets/js/bootstrap.js"></script>
+<script src="./assets/js/air-datepicker.js"></script>
+<script src="./assets/js/datatables.min.js"></script>
+<script src="./assets/js/header.js"></script>
+<script src="./assets/js/base64.js"></script>
+<script src="./assets/js/setImage.js"></script>
+<script src="./assets/js/axios.js"></script>
+<script src="./assets/js/admin.js"></script>
+<script src="./assets/js/main.js"></script>
 
 </html>
