--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,11 +10,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,500;1,300&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/air-datepicker.css">
-    <link rel="stylesheet" href="/assets/css/cropper.css">
-    <link rel="stylesheet" href="/assets/css/common.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/air-datepicker.css">
+    <link rel="stylesheet" href="./assets/css/cropper.css">
+    <link rel="stylesheet" href="./assets/css/common.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
@@ -71,10 +71,10 @@
     <!-- Form Section start here -->
     <section class="form-section main">
         <div class="add-btn-div">
-            <img src="/assets/image/add-btn.png" alt="Add Button" class="add-btn">
+            <img src="./assets/image/add-btn.png" alt="Add Button" class="add-btn">
         </div>
         <div class="minus-btn-div dsp-none">
-            <img src="/assets/image/minus-btn.png" alt="Minus Button" class="minus-btn">
+            <img src="./assets/image/minus-btn.png" alt="Minus Button" class="minus-btn">
         </div>
         <div class="sideBar-cardClone i-dsp-none">
             <div class="select-item">
@@ -222,16 +222,16 @@
     <!-- modal popup -->
 
 </body>
-<script src="/assets/js/jquery.min.js"></script>
-<script src="/assets/js/popper.min.js"></script>
-<script src="/assets/js/bootstrap.js"></script>
-<script src="/assets/js/air-datepicker.js"></script>
-<script src="/assets/js/cropper.js"></script>
-<script src="/assets/js/header.js"></script>
-<script src="/assets/js/base64.js"></script>
-<script src="/assets/js/setImage.js"></script>
-<script src="/assets/js/axios.js"></script>
-<script src="/assets/js/main.js"></script>
-<script src="/assets/js/validation.js"></script>
+<script src="./assets/js/jquery.min.js"></script>
+<script src="./assets/js/popper.min.js"></script>
+<script src="./assets/js/bootstrap.js"></script>
+<script src="./assets/js/air-datepicker.js"></script>
+<script src="./assets/js/cropper.js"></script>
+<script src="./assets/js/header.js"></script>
+<script src="./assets/js/base64.js"></script>
+<script src="./assets/js/setImage.js"></script>
+<script src="./assets/js/axios.js"></script>
+<script src="./assets/js/main.js"></script>
+<script src="./assets/js/validation.js"></script>
 
 </html>
