--- a/frontend/login.html
+++ b/frontend/login.html
@@ -10,11 +10,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,500;1,300&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/air-datepicker.css">
-    <link rel="stylesheet" href="/assets/css/common.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/login.css">
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/air-datepicker.css">
+    <link rel="stylesheet" href="./assets/css/common.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/login.css">
 </head>
 
 <body>
@@ -93,7 +93,7 @@
                                     aria-hidden="true"> *</span></span>
                             <input id="inputPassword" type="password" name="password" class="input-field">
                             <div class="password-icon-div login">
-                                <img src="/assets/image/password-icon.png" alt="password-eye-icon"
+                                <img src="./assets/image/password-icon.png" alt="password-eye-icon"
                                     class="password-icon-eye">
                             </div>
                         </label>
@@ -112,16 +112,16 @@
     <!-- Form Section end here -->
 
 </body>
-<script src="/assets/js/jquery.min.js"></script>
-<script src="/assets/js/popper.min.js"></script>
-<script src="/assets/js/bootstrap.js"></script>
-<script src="/assets/js/air-datepicker.js"></script>
-<script src="/assets/js/base64.js"></script>
-<script src="/assets/js/setImage.js"></script>
-<script src="/assets/js/header.js"></script>
-<script src="/assets/js/main.js"></script>
-<script src="/assets/js/axios.js"></script>
-<script src="/assets/js/login.js"></script>
-<script src="/assets/js/validation.js"></script>
+<script src="./assets/js/jquery.min.js"></script>
+<script src="./assets/js/popper.min.js"></script>
+<script src="./assets/js/bootstrap.js"></script>
+<script src="./assets/js/air-datepicker.js"></script>
+<script src="./assets/js/base64.js"></script>
+<script src="./assets/js/setImage.js"></script>
+<script src="./assets/js/header.js"></script>
+<script src="./assets/js/main.js"></script>
+<script src="./assets/js/axios.js"></script>
+<script src="./assets/js/login.js"></script>
+<script src="./assets/js/validation.js"></script>
 
 </html>
